k8s/common/omos-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT, X-CustomHeader, Keep-Alive, User-Agent, X-Requested-With, If-Modified-Since, Cache-Control, Content-Type, Authorization"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  rules:
    - host: api.example.com
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /api/notice
            pathType: Prefix
            backend:
              service:
                name: notice-service
                port:
                  number: 80
          - path: /api/student
            pathType: Prefix
            backend:
              service:
                name: student-service
                port:
                  number: 80
          - path: /api/calendar
            pathType: Prefix
            backend:
              service:
                name: calendar-service
                port:
                  number: 80
          - path: /api/notification
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 80
